// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components / Sidebar when component renders when is desktop should render 300 1`] = `
<div
  class="v-sheet theme--light"
>
  <div
    class="v-overlay v-overlay--absolute theme--dark"
    style="z-index: 5;"
  >
    <div
      class="v-overlay__scrim"
      style="opacity: 0; background-color: rgb(33, 33, 33); border-color: #212121;"
    />
  </div>
  <aside
    class="v-navigation-drawer v-navigation-drawer--absolute v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right theme--light"
    style="height: 100%; top: 0px; transform: translateX(0%); width: 300px;"
  >
    <div
      class="v-navigation-drawer__content"
    >
      <div
        class="title-container"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate title-navigation mdi mdi-bus theme--light primary--text"
        />
         
        <div
          class="v-list-item__title title-navigation"
        >
          
        EMTU
      
        </div>
         
        <button
          class="v-icon notranslate title-navigation v-icon--link mdi mdi-close theme--light primary--text"
          type="button"
        />
      </div>
       
      <div
        class="v-list v-sheet theme--light v-list--dense"
        role="list"
      >
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-magnify theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Buscar
            </span>
          </div>
        </a>
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-format-list-numbered theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Lista de CID's
            </span>
          </div>
        </a>
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-group theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Sobre nós
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="v-navigation-drawer__border"
    />
  </aside>
</div>
`;

exports[`Components / Sidebar when component renders when is mobile should render 100% 1`] = `
<div
  class="v-sheet theme--light"
>
  <div
    class="v-overlay v-overlay--absolute theme--dark"
    style="z-index: 5;"
  >
    <div
      class="v-overlay__scrim"
      style="opacity: 0; background-color: rgb(33, 33, 33); border-color: #212121;"
    />
  </div>
  <aside
    class="v-navigation-drawer v-navigation-drawer--absolute v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right theme--light"
    style="height: 100%; top: 0px; transform: translateX(0%); width: 100%;"
  >
    <div
      class="v-navigation-drawer__content"
    >
      <div
        class="title-container"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate title-navigation mdi mdi-bus theme--light primary--text"
        />
         
        <div
          class="v-list-item__title title-navigation"
        >
          
        EMTU
      
        </div>
         
        <button
          class="v-icon notranslate title-navigation v-icon--link mdi mdi-close theme--light primary--text"
          type="button"
        />
      </div>
       
      <div
        class="v-list v-sheet theme--light v-list--dense"
        role="list"
      >
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-magnify theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Buscar
            </span>
          </div>
        </a>
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-format-list-numbered theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Lista de CID's
            </span>
          </div>
        </a>
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-group theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Sobre nós
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="v-navigation-drawer__border"
    />
  </aside>
</div>
`;

exports[`Components / Sidebar when is not logged should render default items 1`] = `
<div
  class="v-sheet theme--light"
>
  <aside
    class="v-navigation-drawer v-navigation-drawer--absolute v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right theme--light"
    style="height: 100%; top: 0px; transform: translateX(0%); width: 100%;"
  >
    <div
      class="v-navigation-drawer__content"
    >
      <div
        class="title-container"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate title-navigation mdi mdi-bus theme--light primary--text"
        />
         
        <div
          class="v-list-item__title title-navigation"
        >
          
        EMTU
      
        </div>
         
        <button
          class="v-icon notranslate title-navigation v-icon--link mdi mdi-close theme--light primary--text"
          type="button"
        />
      </div>
       
      <div
        class="v-list v-sheet theme--light v-list--dense"
        role="list"
      >
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-magnify theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Buscar
            </span>
          </div>
        </a>
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-format-list-numbered theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Lista de CID's
            </span>
          </div>
        </a>
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-group theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Sobre nós
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="v-navigation-drawer__border"
    />
  </aside>
</div>
`;

exports[`Components / Sidebar when user is logged should render admin items 1`] = `
<div
  class="v-sheet theme--light"
>
  <aside
    class="v-navigation-drawer v-navigation-drawer--absolute v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right theme--light"
    style="height: 100%; top: 0px; transform: translateX(0%); width: 100%;"
  >
    <div
      class="v-navigation-drawer__content"
    >
      <div
        class="title-container"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate title-navigation mdi mdi-bus theme--light primary--text"
        />
         
        <div
          class="v-list-item__title title-navigation"
        >
          
        EMTU
      
        </div>
         
        <button
          class="v-icon notranslate title-navigation v-icon--link mdi mdi-close theme--light primary--text"
          type="button"
        />
      </div>
       
      <div
        class="v-list v-sheet theme--light v-list--dense"
        role="list"
      >
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Home
            </span>
          </div>
        </a>
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Buscas realizadas
            </span>
          </div>
        </a>
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Acessos diários
            </span>
          </div>
        </a>
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Ranking de Linhas
            </span>
          </div>
        </a>
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Solicitações
            </span>
          </div>
        </a>
        <a
          class="v-list-item v-list-item--link theme--light"
          role="listitem"
          router=""
          tabindex="0"
        >
          <div
            class="v-list-item__icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            />
          </div>
           
          <div
            class="v-list-item__content"
          >
            <span
              class="item-title"
            >
              Fazer uma busca
            </span>
          </div>
        </a>
      </div>
    </div>
    <div
      class="v-navigation-drawer__border"
    />
  </aside>
</div>
`;
